--- a/view/content_select_movie_time.ejs
+++ b/view/content_select_movie_time.ejs
@@ -36,8 +36,8 @@
                 if ("slot" in movieDataObj) {
                     movieDataObj["slot"].push({
                         "theater": movie["theater"],
-                        "showtime": movie["showtime"],
-                        "reservable": ( this.hourToMinute(movie["showtime"]) > this.hourToMinute( this.updateClock() ) )
+                        "start_time": movie["start_time"].replace(/:\d{2}$/, ''),
+                        "reservable": ( this.hourToMinute(movie["start_time"]) > this.hourToMinute( this.updateClock() ) )
                     });
                 } else {
                     movieDataObj["movie_id"] = movie["movie_id"];
@@ -46,8 +46,8 @@
                     movieDataObj["poster"] = movie["img_path"];
                     movieDataObj["slot"] = [{
                         "theater": movie["theater"],
-                        "showtime": movie["showtime"],
-                        "reservable": ( this.hourToMinute(movie["showtime"]) > this.hourToMinute( this.updateClock() ) )
+                        "start_time": movie["start_time"].replace(/:\d{2}$/, ''),
+                        "reservable": ( this.hourToMinute(movie["start_time"]) > this.hourToMinute( this.updateClock() ) )
                     }];
                 }
             });
@@ -73,14 +73,14 @@
                 allMvTime.innerHTML += slot["reservable"] ? `
                         <li class="mvTimeList" id="list0${index + 1}">
                             <p class="theater">${slot["theater"]}</p>
-                            <p class="startAndEndTime">${slot["showtime"]}</p>
-                            <p class="startAndEndTime">~${this.getEndtime(slot["showtime"], movieDataObj["duration"])}</p>
+                            <p class="startAndEndTime">${slot["start_time"]}</p>
+                            <p class="startAndEndTime">~${this.getEndtime(slot["start_time"], movieDataObj["duration"])}</p>
                         </li>
                     ` : `
                         <li class="mvTimeList blockClick" id="list0${index + 1}">
                             <p class="theater">${slot["theater"]}</p>
-                            <p class="startAndEndTime">${slot["showtime"]}</p>
-                            <p class="startAndEndTime">~${this.getEndtime(slot["showtime"], movieDataObj["duration"])}</p>
+                            <p class="startAndEndTime">${slot["start_time"]}</p>
+                            <p class="startAndEndTime">~${this.getEndtime(slot["start_time"], movieDataObj["duration"])}</p>
                         </li>
                     `;
             });
@@ -162,7 +162,7 @@
             });
         }
 
-        controler(movieTimeData) {
+        controller(movieTimeData) {
             this.getData();
             const movieDataObj = this.processData(movieTimeData)
             this.displayMovieTime(movieDataObj);
@@ -170,19 +170,39 @@
         }
     }
 
-    const movieTimeData = [
-        { "movie_id": 1, "duration": 110, "title": "플립", showtime: '11:00', theater: 'A관', img_path: 'images/플립.jpg' },
-        { "movie_id": 1, "duration": 110, "title": "플립", showtime: '12:00', theater: 'B관', img_path: 'images/플립.jpg' },
-        { "movie_id": 1, "duration": 110, "title": "플립", showtime: '13:00', theater: 'C관', img_path: 'images/플립.jpg' },
-        { "movie_id": 1, "duration": 110, "title": "플립", showtime: '14:00', theater: 'D관', img_path: 'images/플립.jpg' },
-        { "movie_id": 1, "duration": 110, "title": "플립", showtime: '15:00', theater: 'A관', img_path: 'images/플립.jpg' },
-        { "movie_id": 1, "duration": 110, "title": "플립", showtime: '20:00', theater: 'B관', img_path: 'images/플립.jpg' },
-        { "movie_id": 1, "duration": 110, "title": "플립", showtime: '21:00', theater: 'C관', img_path: 'images/플립.jpg' },
-        { "movie_id": 1, "duration": 110, "title": "플립", showtime: '22:00', theater: 'D관', img_path: 'images/플립.jpg' }
-    ];
+    // const movieTimeData = [
+    //     { "movie_id": 1, "duration": 110, "title": "플립", showtime: '11:00', theater: 'A관', img_path: 'images/플립.jpg' },
+    //     { "movie_id": 1, "duration": 110, "title": "플립", showtime: '12:00', theater: 'B관', img_path: 'images/플립.jpg' },
+    //     { "movie_id": 1, "duration": 110, "title": "플립", showtime: '13:00', theater: 'C관', img_path: 'images/플립.jpg' },
+    //     { "movie_id": 1, "duration": 110, "title": "플립", showtime: '14:00', theater: 'D관', img_path: 'images/플립.jpg' },
+    //     { "movie_id": 1, "duration": 110, "title": "플립", showtime: '15:00', theater: 'A관', img_path: 'images/플립.jpg' },
+    //     { "movie_id": 1, "duration": 110, "title": "플립", showtime: '20:00', theater: 'B관', img_path: 'images/플립.jpg' },
+    //     { "movie_id": 1, "duration": 110, "title": "플립", showtime: '21:00', theater: 'C관', img_path: 'images/플립.jpg' },
+    //     { "movie_id": 1, "duration": 110, "title": "플립", showtime: '22:00', theater: 'D관', img_path: 'images/플립.jpg' }
+    // ];
 
-    const page = new Select_movie_Time("select_movie_time_popup");
-    page.controler(movieTimeData);
+    
+
+    const runTimeSelection = (async () => {
+        const settings = {
+            method: "POST",
+            headers: {
+                "Accept": 'application/json',
+                "Content-Type": 'application/json',
+            }
+        };
+        try {
+            const response = await fetch("/", settings)
+            const movieTimeData = await response.json();
+
+            console.log(movieTimeData);
+            
+            const page = new Select_movie_Time("select_movie_time_popup");
+            page.controller(movieTimeData);
+        } catch (err) {
+            console.error(err);
+        }
+    })();
 
 </script>
 
