--- a/view/keypadFrame.ejs
+++ b/view/keypadFrame.ejs
@@ -3,20 +3,20 @@
     <p class="bookingNumberText">
         <%= title %>
     </p>
-    <input id="phoneNumber" class="phoneNumber" type="text" placeholder="010-1111-2222">
-    <button class="key" value="1">1</button>
-    <button class="key" value="2">2</button>
-    <button class="key" value="3">3</button>
-    <button class="key" value="4">4</button>
-    <button class="key" value="5">5</button>
-    <button class="key" value="6">6</button>
-    <button class="key" value="7">7</button>
-    <button class="key" value="8">8</button>
-    <button class="key" value="9">9</button>
-    <button class="key delete" value="delete"><i class="fa-solid fa-delete-left"></i></button>
-    <button class="key" value="0">0</button>
-    <button class="key" value="reset">재입력</button>
-    <button id="checkBtn" class="check" disabled>확인</button>
+    <input id="phoneNumber" class="phoneNumber" type="text" placeholder="010-1111-2222" name="checkInformation" disabled>
+    <button type="button" class="key" value="1">1</button>
+    <button type="button" class="key" value="2">2</button>
+    <button type="button" class="key" value="3">3</button>
+    <button type="button" class="key" value="4">4</button>
+    <button type="button" class="key" value="5">5</button>
+    <button type="button" class="key" value="6">6</button>
+    <button type="button" class="key" value="7">7</button>
+    <button type="button" class="key" value="8">8</button>
+    <button type="button" class="key" value="9">9</button>
+    <button type="button" class="key delete" value="delete"><i class="fa-solid fa-delete-left"></i></button>
+    <button type="button" class="key" value="0">0</button>
+    <button type="button" class="key" value="reset">재입력</button>
+    <button type="submit" id="checkBtn" class="check" disabled>확인</button>
 </section>
 
 <script>
